  - The "Organize Favorites" menu entry is disabled if no favorites exist
  - The filename is not highlighted anymore when opening the properties dialog
  - Double-clicking on the file location from the clip properties will now open
    the containing folder and select the current file
  - The information fields in the properties dialog are now correctly aligned with their labels
* Ticket #2108, Adjust drop-down list width for long shaders name
* Updated libpng to v1.5.10
* Updated Little CMS to v2.3+ (git 839a5b0 23/03/2012)
* Updated ffmpeg
* Updated MediaInfoLib to v0.7.54
* Updated ZenLib to v0.4.25
* Updated VirtualDub to v1.10.2-test5
* New icons for the Windows 7 taskbar controls
* Updated Polish, Japanese, Chinese Simplified, Chinese Traditional, Russian, Ukrainian,
  German, Slovak, French and Armenian translations
! Long opening of MKV files after using the "mkvclean" utility
! Incorrect detection of interlaced flag on some MPEG2 stream with DXVA decoder,
  fix choppy playback with incorrect frame rate
! MPASplitter can't split some .MP3 files
! MPCVideoDec switched to software decoding mode, even if only the DXVA decoder
  was selected, but wasn't supported
! MPEGSplitter can't load MPEG-TS files with corrupted packet header
  (incorrect Adaptation Field)
! Freeze occurs when madVR leaves exclusive mode
! MPCVideoDec bad playback with VC1 files with pulldown in MPEG-TS
! Ticket #90/#971/#1682, MP4Splitter - Fixed hanged image/slow response after seeking
! Ticket #413/#2096, Fixed register command line switches for audio and video files
! Ticket #1007, FLVSplitter: increased the depth of the search for audio and video tags
! Ticket #1987, MP4Splitter: Fix a deadloop which happened sometimes at the end of a file
! Ticket #2007, Prevent a memory leak in FLACSource
! Ticket #2013, Bug when saving the ASS/SSA subtitle, the header has incorrect values
! Ticket #2014, Embedded subtitle overrides "Prefer external"